--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,7 @@
 .App {
   text-align: center;
+  width: 100%;
+  height: 100%;
 }
 
 .App-logo {
@@ -7,15 +9,33 @@
   pointer-events: none;
 }
 
+.logo-1 {
+  position: relative;
+  left: -50px;
+  top: 30px;
+  width: 100px;
+  height: 100px;
+transform: rotate(20deg);
+}
+.logo-2 {
+  position: relative;
+  left: 20px;
+  width: 150px;
+  height: 150px;
+}
+
 @media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+  .logo-1 {
+    animation: App-logo-spin infinite 10s linear;
+  }
+  .logo-2 {
+    animation: App-logo-spin-reverse infinite 20s linear;
   }
 }
 
 .App-header {
   background-color: #282c34;
-  min-height: 100vh;
+  min-height: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -34,5 +54,14 @@
   }
   to {
     transform: rotate(360deg);
+  }
+}
+
+@keyframes App-logo-spin-reverse {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(-360deg);
   }
 }
